# seqan_apps

./: CMakeLists.txt  CMakeLists.txt.bak  README.md
R-related/: bam2roi.bash  bam2roi.bash.bak  plot.awk  plot.awk.bak  projectList.txt  projectList.txt.bak  projectList.xlsx  roiPCA.sh  roiSOM.sh  roiSOM.sh.bak  roiTransforms.sh  roiTransforms.sh.bak
R-related/Rnw/: RoiReport.Rnw  RoiReport.Rnw.bak  child-ROI-selected.Rnw  child-ROI-summary.Rnw  child-ROI-summary.Rnw.bak
R-related/Rnw/rfunctions/: readROI.R  writeROI.R
R-related/roiGFF/: CMakeLists.txt  INFO  TODO.txt  roiGFF.cpp
R-related/sambamstat/: TODO.txt  roi.h  sambamstat.h
apps/: CMakeLists.txt  CMakeLists.txt.bak
apps/clean_ngs/: CMakeLists.txt  CMakeLists.txt.bak  INFO  TODO  adaptor_record.h  clean_ngs.cpp  clean_ngs.cpp.bak  clean_ngs.h  clean_ngs.h.bak  clean_ngs_app.cpp  clean_ngs_app.cpp.bak
apps/clean_ngs/example/: adaptors.tsv  small.fastq
apps/clean_ngs/tests/: README  adapters.txt  generate_outputs.sh  reads_1.fq  reads_1_out_pe_stdout.txt  reads_1_out_se.fq  reads_1_out_se_l90.fq  reads_1_out_se_l90_rej.fq  reads_1_out_se_l90_stdout.txt  reads_1_out_se_stdout.txt  reads_2.fq  reads_2_out_pe.fq  run_tests.py
apps/faUniq/: CMakeLists.txt  CMakeLists.txt.bak  INFO  faUniq.cpp  faUniq.h
apps/roiGFF/: CMakeLists.txt  CMakeLists.txt.bak  roiGFF.h  roiGFF_app.cpp
apps/roiPCA/: CMakeLists.txt  CMakeLists.txt.bak  INFO  TODO.txt  roi.h  roiPCA.cpp  roiPCA.h  roi_old_to_new.awk
apps/sambamstat/: CMakeLists.txt  CMakeLists.txt.bak  INFO  sambamstat.cpp  sambamstat.h  sambamstat.h.bak  sambamstat.old.h  testme.cpp
apps/testme/: CMakeLists.txt  CMakeLists.txt.bak  INFO  testme.cpp  testme.h  testme.rar
demos/: CMakeLists.txt
include/seqan/: roi_io.h
include/seqan/roi_io/: INFO  read_roi.h  roi_io_context.h  roi_record.h  write_roi.h
old/apps/ngs_roi/: CMakeLists.txt  README  bam2roi.cpp  png_canvas.h  project_interval.cpp  project_spliced.cpp  roi_builder.cpp  roi_builder.h  roi_feature_projection.cpp  roi_plot_thumbnails.cpp
old/apps/ngs_roi/R/: .Rhistory
old/apps/ngs_roi/R/ngsroi.Rcheck/: 00install.out  ngsroi-Ex.R  ngsroi-Ex.Rout  ngsroi-manual.tex
old/apps/ngs_roi/R/ngsroi.Rcheck/00_pkg_src/ngsroi/: DESCRIPTION
old/apps/ngs_roi/R/ngsroi.Rcheck/00_pkg_src/ngsroi/R/: readROI.R
old/apps/ngs_roi/R/ngsroi.Rcheck/ngsroi/: DESCRIPTION  INDEX
old/apps/ngs_roi/R/ngsroi.Rcheck/ngsroi/Meta/: Rd.rds  hsearch.rds  links.rds  package.rds
old/apps/ngs_roi/R/ngsroi.Rcheck/ngsroi/R/: ngsroi.rdb  ngsroi.rdx
old/apps/ngs_roi/R/ngsroi.Rcheck/ngsroi/help/: AnIndex  aliases.rds  ngsroi.rdb  ngsroi.rdx  paths.rds
old/apps/ngs_roi/R/ngsroi.Rcheck/ngsroi/html/: 00Index.html
old/apps/ngs_roi/tests/: generate_outputs.sh  out_small_bed_mdifference_ss.roi  out_small_bed_mintersection_ss.roi  out_small_bed_mprojection_ss.roi  out_small_bed_munion.roi  out_small_gtf_mintersection.roi  out_small_gtf_mprojection_ss.roi  out_small_gtf_munion.roi  run_tests.py
old/apps/ngs_roi/tool_shed/: ctd2galaxy.py  ps2pswLinks.gawk.bak  roi_plot_9.sh.bak  roi_report.py.bak
old/apps/ngs_roi/tool_shed/ngs_roi/: app.py
old/tests/roi_io/: CMakeLists.txt  test_roi_io.cpp  test_roi_io.h
tests/: CMakeLists.txt  CMakeLists.txt.bak
